// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HugBanner renders 1`] = `
.c1 {
  padding: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 32px;
}

<div
  className="c0 c1"
>
  <svg
    className="c2"
    fill="currentcolor"
    height={20}
    mr={3}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M12,1.54L14.55,9.6,23,9.53l-6.87,4.91,2.67,8-6.8-5-6.8,5,2.67-8L1,9.53,9.45,9.6Z"
    />
  </svg>
</div>
`;

exports[`HugBanner renders text and icon 1`] = `
.c1 {
  padding: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-right: 32px;
}

<div
  className="c0 c1"
>
  <svg
    className="c2"
    fill="currentcolor"
    height={20}
    mr={3}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M12,1.54L14.55,9.6,23,9.53l-6.87,4.91,2.67,8-6.8-5-6.8,5,2.67-8L1,9.53,9.45,9.6Z"
    />
  </svg>
  <span
    className=""
  >
    Hello
  </span>
</div>
`;
